cmake_minimum_required(VERSION 3.20)
project(New_features_c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(data_structures data_structures.cpp)
add_executable(task_1 task_1.cpp)
add_executable(task_2 task_2.cpp)
add_executable(delete_me_later delete_me_later.cpp)
add_executable(task_3 task_3.cpp)
